[WIP] Warn on future divergent behavior for conditional views
ghstack-source-id: 151794039ccdfe11f9d631027b3ae550c7d3f0f7
Pull Request resolved: https://github.com/pytorch/pytorch/pull/126129

--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -1158,6 +1158,10 @@ def _set_deterministic_algorithms(
 ) -> None: ...  # THPModule_setDeterministicAlgorithms
 def _get_deterministic_fill_uninitialized_memory() -> _bool: ...  # THPModule_deterministicFillUninitializedMemory
 def _set_deterministic_fill_uninitialized_memory(arg: _bool) -> None: ...  # THPModule_setDeterministicFillUninitializedMemory
+def _set_extra_conditional_view_warnings(mode: _bool) -> None: ...
+def _get_extra_conditional_view_warnings() -> _bool: ...
+def _set_future_lazy_clone(mode: _bool) -> None: ...
+def _get_future_lazy_clone() -> _bool: ...
 def _get_nnpack_enabled() -> _bool: ...  # THPModule_userEnabledNNPACK
 def _set_nnpack_enabled(arg: _bool) -> None: ...  # THPModule_setUserEnabledNNPACK
 def _get_warnAlways() -> _bool: ...  # THPModule_warnAlways
